sonar-server/src/main/webapp/stylesheets/style.css
/* ... */
.error {
  border: 1px solid red;
  background-color: #FF5252;
  color: #eee;
  margin: 0 0 4px;
  padding: 4px;
}

.error a {
  color: #eee;
}

.notice {
  border: 1px solid #9c9;
  background-color: #e2f9e3;
  color: #060;
  margin: 0 0 4px;
  padding: 4px;
}

/* ------------------- LOGIN FORM ------------------- */
#login_form {
  border: 1px solid #4b9fd5;
  width: 230px;
  text-align: left;
  background-color: #d4e7ff;
  padding: 15px 20px;
}

#login_form h4 {
  text-align: left;
  font-weight: bold;
  color: #036;
}

#login_form p {
  padding: 3px 0 10px;
}
#login_form .desc {
  font-size: 85%;
  font-weight: normal;
}
/* ------------------- DOCUMENTATION --------------------- */
.doc p {
	margin: 10px 0;
}
.doc pre, pre.code {
	color: #777;
	background-color: #f4f4f4;
	padding: 10px;
	margin: 10px 0;
	border: 1px dashed #777;
	font-size: 93%;
	line-height: 1.5em;
}

/* ------------------- TABLES ------------------- */
.odd {
  background-color: #fff;
}
.odd.selected, .even.selected, .odd.selected a, .even.selected a, .even.selected span, .odd.selected span {
  background-color: #4b9fd5;
  color: #fff;
}
table.data thead th {
  font-size: 93%;
  padding: 3px 7px 3px 3px;
}
table.data tfoot td {
  font-size: 93%;
  color: #777;
  padding: 3px 0 3px 10px;
}

table.data tbody td {
  padding: 3px 7px 3px 3px;
  vertical-align: middle;
}
table.data td.small, table.data th.small {
  padding: 0;
  white-space: nowrap;
}
table.data th img, table.data td img {
  vertical-align: middle;
}
.data thead tr.total {
  background-color: #eee;
  font-weight: normal;
  font-size: 108%;
  border-bottom: 1px solid silver;
  border-top: 1px solid silver;
}
.data thead tr.total th {
  font-weight: normal;
}
.data thead tr.blank {
  background-color: #fff;
  line-height: 15px;
}
.data tr.highlight {
  background-color: #CAE3F2;
  border-top: 1px solid #4B9FD5;
  border-bottom: 1px solid #4B9FD5;
}
.hoverable:hover {
  background-color: #CAE3F2;
}

.hoverable:hover a {
  color: #111;
}

table.sortable .sortcol {
  cursor: pointer;
  padding-right: 15px;
  background-repeat: no-repeat;
  background-position: right center;
  text-decoration: underline;
}

table.sortable .sortasc {
  background-image: url('../images/bullet_arrow_up.gif');
  background-position: right center;
}

table.sortable .sortdesc {
  background-image: url('../images/bullet_arrow_down.gif');
  background-position: right center;
}

table.sortable .nosort {
  cursor: default;
}

table.spaced th {
  font-weight: bold;
  color: #333;
  padding: 4px 5px;
}

table.spaced td, table.matrix tfoot td {
  padding: 3px 5px;
  line-height: 18px;
}
table.spaced td img {
  vertical-align: text-bottom;
}

table.spacedicon th {
  font-weight: bold;
  color: #333;
  padding: 4px 5px;
}

table.spacedicon td {
  padding: 0px 5px;
  height: 24px;
}

.thin {
  width: 1%;
}

.nowrap {
  white-space: nowrap;
}
td.sep {
	width: 10px;
}
.spacer {
  width: 5px;
  display: inline-block;
}
.formError {
  display: inline-block;
  background-color: #FF9090;
  color: #000;
  padding: 0 5px;
}
table.form td {
  padding: 2px 5px;
  vertical-align: top;
}
table.form td.first {
  min-width: 120px;
  text-align: right;
  font-weight: bold;
  vertical-align: middle;
}
table.form td img {
  vertical-align: bottom;
}
.admin hr {
  background: transparent;
  border-left:  none;
  border-right: none;
  border-top:   none;
  border-bottom: 1px dashed #FFD324;
  height: 1px;
}



/* OPERATIONS */
#page-operations {
  display: inline-block;
  width: 100%;
}
ul.operations {
  float: right;
  list-style-type: none;
  margin: 0;
  background-color: #f4f4f4;
  border: 1px solid #cdcdcd;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
}
ul.operations li {
  float: left;
  margin: 0;
  padding: 2px 7px;
  font-size: 85%;
  border-right: 1px solid #cdcdcd;
}
ul.operations li.last {
  border-right-width:0;
}
ul.operations li a {
  color: #555;
}



/* RESOURCE VIEWER */
.resourceName h1 {
	margin: 5px 0;
}
#source {
  margin: 1px;
  padding: 15px 2px 2px;
}

#source h2 {
  border-bottom: 1px solid #dedede;
  margin-bottom: 5px;
  font-size: 100%;
  font-weight: bold;
  padding: 0 0 5px 5px;
}

#source pre {
  font-size: 93%;
  text-align: left;
  margin-top: 10px;
  border: 1px solid #ccc;
  background-color: #fff;
}

#source span {
  padding-left: 4px;
}

#source .error {
  background-color: #FF9090;
  border: 0;
  color: #000;
  margin: 0;
  padding: 0;
}

#source .warning {
  background-color: #FFFFAF;
  border: 0;
  color: #000;
  margin: 0;
  padding: 0;
}

#source .info {
  background-color: #80FF80;
  border: 0;
  color: #000;
  margin: 0;
  padding: 0;
}

#source .ln {
  color: #666;
  padding-right: 4px;
  border-right: solid 1px #ccc;
  margin-right: 4px;
  background-color: #eee;
}

#source .big {
  font-size: 100%;
  text-align: left;
}
#gwtpage {
	width: 100%;
	clear: both;
}
.gwt-SourcePanel {
  font-size: 12px;
  background-color: #fff;
  border-top: 1px solid silver;
  border-bottom: 1px solid silver;
  width: 100%;
}

.gwt-SourcePanel .ln {
  background-color: #eee;
  white-space: nowrap;
  text-align: right;
  color: #777;
  border-right: 1px solid silver;
  padding: 0 3px;
  height: 14px;
}

.gwt-SourcePanel .src {
  padding: 0 5px;
  height: 14px;
}

.gwt-SourcePanel .val {
  background-color: #eee;
  border-right: 1px solid silver;
  text-align: right;
  color: #777;
  padding: 0 3px;
  height: 14px;
  white-space: nowrap;
}

.gwt-SourcePanel .red {
  background-color: #F0C8C8;
}

.gwt-SourcePanel .orange {
  background-color: #FFF6BF;
  color: #514721;
}

.gwt-SourcePanel .green {
  background-color: #ACE97C;
}

.gwt-SourcePanel .msg {
  font-family: sans-serif;
  vertical-align: top;
  padding: 3px 0;
  height: 1.3em;
  background-position: 5px 1px;
  background-repeat: no-repeat;
}
/* ... */

